--- a/public/index.html
+++ b/public/index.html
@@ -5,74 +5,50 @@
   <title>Saw Countdown</title>
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <style>
-    html, body {
-      height: 100%;
-      margin: 0;
-      background: #0b0b0b;
-      color: #d90429;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      font-family: monospace;
-    }
-    #t {
-      font-size: 18vw;
-      font-weight: bold;
-      letter-spacing: 0.05em;
-      text-shadow: 0 0 20px #4a000a;
-      transition: filter .15s ease;
-    }
-
+    html, body { height:100%; margin:0; background:#0b0b0b; color:#d90429;
+      display:flex; justify-content:center; align-items:center; font-family:monospace; }
+    #t { font-size:18vw; font-weight:bold; letter-spacing:.05em; text-shadow:0 0 20px #4a000a; transition:filter .15s ease; }
     @keyframes redFlicker {
-      0%, 100% { filter: none; text-shadow: 0 0 22px #4a000a; }
-      10% { filter: brightness(1.6) contrast(1.3); text-shadow: 0 0 40px #ff0022; }
-      30% { filter: brightness(0.7); }
-      50% { filter: brightness(1.5) contrast(1.5); text-shadow: 0 0 50px #ff0022; }
-      70% { filter: brightness(0.8); }
-      90% { filter: brightness(1.2); }
+      0%,100%{filter:none;text-shadow:0 0 22px #4a000a}
+      10%{filter:brightness(1.6) contrast(1.3);text-shadow:0 0 40px #ff0022}
+      30%{filter:brightness(.7)} 50%{filter:brightness(1.5) contrast(1.5);text-shadow:0 0 50px #ff0022}
+      70%{filter:brightness(.8)} 90%{filter:brightness(1.2)}
     }
     @keyframes shake {
-      0% { transform: translate(0, 0) }
-      20% { transform: translate(-10px, 0) }
-      40% { transform: translate(8px, 0) }
-      60% { transform: translate(-6px, 0) }
-      80% { transform: translate(4px, 0) }
-      100% { transform: translate(0, 0) }
+      0%{transform:translate(0,0)}20%{transform:translate(-10px,0)}40%{transform:translate(8px,0)}
+      60%{transform:translate(-6px,0)}80%{transform:translate(4px,0)}100%{transform:translate(0,0)}
     }
-    .prank #t {
-      animation: redFlicker 1.2s ease-in-out, shake 0.35s ease-in-out;
-    }
+    .prank #t { animation: redFlicker 1.2s ease-in-out, shake .35s ease-in-out; }
   </style>
 </head>
 <body>
   <div id="t">00:00</div>
-  <audio id="laugh" src="/creepy_laugh.mp3" preload="auto"></audio>
+
+  <!-- NEW: audio assets -->
+  <audio id="laugh"    src="/laugh.mp3"    preload="auto"></audio>
+  <audio id="playgame" src="/playgame.mp3" preload="auto"></audio>
 
   <script src="/socket.io/socket.io.js"></script>
   <script>
-    const t = document.getElementById("t");
-    const laugh = document.getElementById("laugh");
+    const t = document.getElementById('t');
+    const laugh = document.getElementById('laugh');
+    const startSfx = document.getElementById('playgame');
     const socket = io();
 
-    let running = false, endAtMs = null, offset = 0, startSeconds = 0, audioArmed = false;
+    let running=false, endAtMs=null, offset=0, startSeconds=0, audioArmed=false;
 
-    function fmt(s) {
-      const m = Math.floor(s / 60);
-      const r = s % 60;
-      return `${String(m).padStart(2,'0')}:${String(r).padStart(2,'0')}`;
-    }
-
-    function render() {
+    function fmt(s){ const m=Math.floor(s/60), r=s%60; return `${String(m).padStart(2,'0')}:${String(r).padStart(2,'0')}`; }
+    function render(){
       let left = startSeconds;
       if (running && endAtMs) {
         const now = Date.now() + offset;
-        left = Math.max(0, Math.ceil((endAtMs - now) / 1000));
+        left = Math.max(0, Math.ceil((endAtMs - now)/1000));
       }
       t.textContent = fmt(left);
       requestAnimationFrame(render);
     }
 
-    socket.on("state", (s) => {
+    socket.on('state', (s)=>{
       const clientNow = Date.now();
       offset = s.serverTimeMs - clientNow;
       running = s.running;
@@ -80,22 +56,29 @@
       endAtMs = s.endAtMs;
     });
 
-    socket.on("prank", async () => {
-      document.body.classList.remove('prank');
-      void document.body.offsetWidth;
-      document.body.classList.add('prank');
-      if (audioArmed) laugh.play().catch(()=>{});
+    // NEW: play laugh on prank
+    socket.on('prank', ()=>{
+      document.body.classList.remove('prank'); void document.body.offsetWidth; document.body.classList.add('prank');
+      if (audioArmed) { try { laugh.pause(); laugh.currentTime = 0; laugh.play(); } catch(e){} }
     });
 
+    // NEW: play "playgame" sound on start
+    socket.on('start-sfx', ()=>{
+      if (audioArmed) { try { startSfx.pause(); startSfx.currentTime = 0; startSfx.play(); } catch(e){} }
+    });
+
+    // Arm audio + request fullscreen on first click (autoplay policy)
     addEventListener('click', async ()=>{
       try { await document.documentElement.requestFullscreen(); } catch(e){}
       if (!audioArmed) {
         try {
-          await laugh.play();
-          laugh.pause();
-          laugh.currentTime = 0;
+          // prime both sounds so future play() calls are allowed
+          await Promise.all([
+            laugh.play().then(()=>{ laugh.pause(); laugh.currentTime=0; }),
+            startSfx.play().then(()=>{ startSfx.pause(); startSfx.currentTime=0; })
+          ]);
           audioArmed = true;
-        } catch(e) {}
+        } catch(e) { /* user may need a second click on some browsers */ }
       }
     });
 
