--- a/public/index.html
+++ b/public/index.html
@@ -5,8 +5,10 @@
   <title>Saw Countdown</title>
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <style>
-    html, body { height:100%; margin:0; background:#0b0b0b; color:#d90429;
-      display:flex; justify-content:center; align-items:center; font-family:monospace; }
+    html, body {
+      height:100%; margin:0; background:#0b0b0b; color:#d90429;
+      display:flex; justify-content:center; align-items:center; font-family:monospace;
+    }
     #t { font-size:18vw; font-weight:bold; letter-spacing:.05em; text-shadow:0 0 20px #4a000a; transition:filter .15s ease; }
     @keyframes redFlicker {
       0%,100%{filter:none;text-shadow:0 0 22px #4a000a}
@@ -19,23 +21,37 @@
       60%{transform:translate(-6px,0)}80%{transform:translate(4px,0)}100%{transform:translate(0,0)}
     }
     .prank #t { animation: redFlicker 1.2s ease-in-out, shake .35s ease-in-out; }
+
+    /* Banner prompting for audio arm */
+    #armBanner {
+      position: fixed; left: 50%; transform: translateX(-50%);
+      bottom: 20px; background: #1a1a1a; color: #fff; border: 1px solid #333;
+      padding: 10px 14px; border-radius: 9999px; font-size: 14px; opacity: .95;
+      pointer-events: none; transition: opacity .2s ease;
+    }
+    #armBanner.hidden { opacity: 0; }
   </style>
 </head>
 <body>
   <div id="t">00:00</div>
+  <div id="armBanner">🔊 tap/click to enable audio</div>
 
-  <!-- NEW: audio assets -->
-  <audio id="laugh"    src="/laugh.mp3"    preload="auto"></audio>
-  <audio id="playgame" src="/playgame.mp3" preload="auto"></audio>
+  <!-- Audio assets -->
+  <audio id="laugh"    src="/laugh.mp3"    preload="auto" onerror="console.error('Failed to load laugh.mp3')"></audio>
+  <audio id="playgame" src="/playgame.mp3" preload="auto" onerror="console.error('Failed to load playgame.mp3')"></audio>
 
   <script src="/socket.io/socket.io.js"></script>
   <script>
     const t = document.getElementById('t');
+    const armBanner = document.getElementById('armBanner');
+
     const laugh = document.getElementById('laugh');
     const startSfx = document.getElementById('playgame');
     const socket = io();
 
     let running=false, endAtMs=null, offset=0, startSeconds=0, audioArmed=false;
+    let pendingStartSfx = false;
+    let pendingPrankSfx = false;
 
     function fmt(s){ const m=Math.floor(s/60), r=s%60; return `${String(m).padStart(2,'0')}:${String(r).padStart(2,'0')}`; }
     function render(){
@@ -48,6 +64,21 @@
       requestAnimationFrame(render);
     }
 
+    function playLaugh(){
+      try {
+        laugh.pause(); laugh.currentTime = 0;
+        const p = laugh.play();
+        if (p && p.catch) p.catch(err => console.warn('laugh play() rejected:', err));
+      } catch(e){ console.warn('laugh play() error:', e); }
+    }
+    function playStart(){
+      try {
+        startSfx.pause(); startSfx.currentTime = 0;
+        const p = startSfx.play();
+        if (p && p.catch) p.catch(err => console.warn('startSfx play() rejected:', err));
+      } catch(e){ console.warn('startSfx play() error:', e); }
+    }
+
     socket.on('state', (s)=>{
       const clientNow = Date.now();
       offset = s.serverTimeMs - clientNow;
@@ -56,29 +87,33 @@
       endAtMs = s.endAtMs;
     });
 
-    // NEW: play laugh on prank
     socket.on('prank', ()=>{
       document.body.classList.remove('prank'); void document.body.offsetWidth; document.body.classList.add('prank');
-      if (audioArmed) { try { laugh.pause(); laugh.currentTime = 0; laugh.play(); } catch(e){} }
+      if (audioArmed) playLaugh();
+      else pendingPrankSfx = true;
     });
 
-    // NEW: play "playgame" sound on start
     socket.on('start-sfx', ()=>{
-      if (audioArmed) { try { startSfx.pause(); startSfx.currentTime = 0; startSfx.play(); } catch(e){} }
+      if (audioArmed) playStart();
+      else pendingStartSfx = true;
     });
 
-    // Arm audio + request fullscreen on first click (autoplay policy)
     addEventListener('click', async ()=>{
       try { await document.documentElement.requestFullscreen(); } catch(e){}
       if (!audioArmed) {
         try {
-          // prime both sounds so future play() calls are allowed
           await Promise.all([
             laugh.play().then(()=>{ laugh.pause(); laugh.currentTime=0; }),
             startSfx.play().then(()=>{ startSfx.pause(); startSfx.currentTime=0; })
           ]);
           audioArmed = true;
-        } catch(e) { /* user may need a second click on some browsers */ }
+          armBanner.classList.add('hidden');
+
+          if (pendingStartSfx) { playStart(); pendingStartSfx = false; }
+          if (pendingPrankSfx) { playLaugh(); pendingPrankSfx = false; }
+        } catch(e) {
+          console.warn('Audio arming failed:', e);
+        }
       }
     });
 
