--- a/public/index.html
+++ b/public/index.html
@@ -35,28 +35,37 @@
   <div id="t">00:00</div>
   <div id="armBanner">🔊 tap/click to enable audio</div>
 
-  <!-- Audio assets -->
-  <audio id="laugh"    src="/laugh.mp3"    preload="auto" onerror="console.error('Failed to load laugh.mp3')"></audio>
-  <audio id="playgame" src="/playgame.mp3" preload="auto" onerror="console.error('Failed to load playgame.mp3')"></audio>
+  <!-- Fallback media elements (used only if WebAudio decode isn't available) -->
+  <audio id="laugh-fb"    src="/laugh.mp3"    preload="auto" onerror="console.error('Failed to load laugh.mp3')"></audio>
+  <audio id="playgame-fb" src="/playgame.mp3" preload="auto" onerror="console.error('Failed to load playgame.mp3')"></audio>
 
   <script src="/socket.io/socket.io.js"></script>
   <script>
     const t = document.getElementById('t');
     const armBanner = document.getElementById('armBanner');
-
-    const laugh = document.getElementById('laugh');
-    const startSfx = document.getElementById('playgame');
     const socket = io();
 
-    let running=false, endAtMs=null, offset=0, startSeconds=0, audioArmed=false;
+    // Timer state
+    let running=false, endAtMs=null, offset=0, startSeconds=0;
 
-    // Queue sounds if they arrive before arming
+    // Queue sounds if events arrive before arming/decoding
     let pendingStartSfx = false;
     let pendingPrankSfx = false;
 
-    // Track last-seen event timestamps to self-heal if we missed one-shot events
+    // “Missed event” self-heal timestamps
     let lastSeenStartAtMs = 0;
     let lastSeenPrankAtMs = 0;
+
+    // Audio (WebAudio primary)
+    let audioArmed = false;
+    let useWebAudio = false;
+    let audioCtx = null;
+    let laughBuf = null;
+    let startBuf = null;
+
+    // HTMLAudio fallback refs
+    const laughFB = document.getElementById('laugh-fb');
+    const startFB = document.getElementById('playgame-fb');
 
     function fmt(s){ const m=Math.floor(s/60), r=s%60; return `${String(m).padStart(2,'0')}:${String(r).padStart(2,'0')}`; }
     function render(){
@@ -69,22 +78,95 @@
       requestAnimationFrame(render);
     }
 
-    function playLaugh(){
-      try {
-        laugh.pause(); laugh.currentTime = 0;
-        const p = laugh.play();
-        if (p && p.catch) p.catch(err => console.warn('laugh play() rejected:', err));
-      } catch(e){ console.warn('laugh play() error:', e); }
-    }
-    function playStart(){
-      try {
-        startSfx.pause(); startSfx.currentTime = 0;
-        const p = startSfx.play();
-        if (p && p.catch) p.catch(err => console.warn('startSfx play() rejected:', err));
-      } catch(e){ console.warn('startSfx play() error:', e); }
+    function playBuffer(buf){
+      if (!audioCtx || !buf) return;
+      const src = audioCtx.createBufferSource();
+      src.buffer = buf;
+      src.connect(audioCtx.destination);
+      try { src.start(0); } catch(e){ console.warn('buffer start failed', e); }
     }
 
-    // Receive authoritative state (with event timestamps)
+    function playLaugh(){
+      if (useWebAudio && laughBuf) playBuffer(laughBuf);
+      else {
+        try {
+          laughFB.pause(); laughFB.currentTime = 0;
+          const p = laughFB.play();
+          if (p && p.catch) p.catch(err => console.warn('laugh (fallback) play() rejected:', err));
+        } catch(e){ console.warn('laugh (fallback) error:', e); }
+      }
+    }
+
+    function playStart(){
+      if (useWebAudio && startBuf) playBuffer(startBuf);
+      else {
+        try {
+          startFB.pause(); startFB.currentTime = 0;
+          const p = startFB.play();
+          if (p && p.catch) p.catch(err => console.warn('start (fallback) play() rejected:', err));
+        } catch(e){ console.warn('start (fallback) error:', e); }
+      }
+    }
+
+    async function fetchAndDecode(url){
+      const res = await fetch(url, { cache: 'force-cache' });
+      if (!res.ok) throw new Error(`HTTP ${res.status} for ${url}`);
+      const arr = await res.arrayBuffer();
+      return await audioCtx.decodeAudioData(arr);
+    }
+
+    async function armAudio(){
+      if (audioArmed) return;
+
+      // Try to create/unlock WebAudio
+      try {
+        audioCtx = new (window.AudioContext || window.webkitAudioContext)();
+        if (audioCtx.state === 'suspended') {
+          await audioCtx.resume();
+        }
+        console.log('[audio] AudioContext state:', audioCtx.state);
+
+        // Preload & decode both mp3s
+        [laughBuf, startBuf] = await Promise.all([
+          fetchAndDecode('/laugh.mp3'),
+          fetchAndDecode('/playgame.mp3')
+        ]);
+        useWebAudio = true;
+        console.log('[audio] decoded via WebAudio');
+      } catch (e) {
+        // WebAudio decode failed — fall back to HTMLAudio
+        console.warn('[audio] WebAudio decode failed; falling back to HTMLAudio', e);
+        useWebAudio = false;
+
+        // prime fallback elements to satisfy autoplay policies
+        try {
+          await Promise.all([
+            laughFB.play().then(()=>{ laughFB.pause(); laughFB.currentTime = 0; }),
+            startFB.play().then(()=>{ startFB.pause(); startFB.currentTime = 0; })
+          ]);
+        } catch (e2) {
+          console.warn('[audio] fallback prime failed (user may need another tap):', e2);
+        }
+      }
+
+      audioArmed = true;
+      armBanner.classList.add('hidden');
+
+      // Flush queued events
+      if (pendingStartSfx) { playStart(); pendingStartSfx = false; }
+      if (pendingPrankSfx) { playLaugh(); pendingPrankSfx = false; }
+    }
+
+    // Arm on first interaction
+    async function tryArm(){ 
+      try { await document.documentElement.requestFullscreen(); } catch(e){}
+      armAudio();
+    }
+    window.addEventListener('pointerdown', tryArm, { passive:true });
+    window.addEventListener('touchstart', tryArm, { passive:true });
+    window.addEventListener('click', tryArm);
+
+    // Socket state (includes event timestamps to self-heal)
     socket.on('state', (s)=>{
       const clientNow = Date.now();
       offset = s.serverTimeMs - clientNow;
@@ -92,64 +174,23 @@
       startSeconds = s.startSeconds;
       endAtMs = s.endAtMs;
 
-      // Self-heal audio if we discover a newer event we haven't handled
       if (s.lastStartAtMs && s.lastStartAtMs > lastSeenStartAtMs) {
-        console.log('[state] Detected unseen START at', new Date(s.lastStartAtMs).toISOString());
         if (audioArmed) playStart(); else pendingStartSfx = true;
         lastSeenStartAtMs = s.lastStartAtMs;
       }
       if (s.lastPrankAtMs && s.lastPrankAtMs > lastSeenPrankAtMs) {
-        console.log('[state] Detected unseen PRANK at', new Date(s.lastPrankAtMs).toISOString());
-        // also add visual effect to match missed event
         document.body.classList.remove('prank'); void document.body.offsetWidth; document.body.classList.add('prank');
         if (audioArmed) playLaugh(); else pendingPrankSfx = true;
         lastSeenPrankAtMs = s.lastPrankAtMs;
       }
     });
 
-    // Live one-shot events (best-effort, immediate)
-    socket.on('prank', ()=>{
-      console.log('[socket] prank event');
+    // Live one-shots (best-effort)
+    socket.on('start-sfx', ()=> { if (audioArmed) playStart(); else pendingStartSfx = true; });
+    socket.on('prank', ()=> {
       document.body.classList.remove('prank'); void document.body.offsetWidth; document.body.classList.add('prank');
       if (audioArmed) playLaugh(); else pendingPrankSfx = true;
     });
-
-    socket.on('start-sfx', ()=>{
-      console.log('[socket] start-sfx event');
-      if (audioArmed) playStart(); else pendingStartSfx = true;
-    });
-
-    // Arm audio on first interaction (support mouse, touch, and pointer)
-    async function tryArm() {
-      if (audioArmed) return;
-      try { await document.documentElement.requestFullscreen(); } catch(e){}
-      try {
-        await Promise.all([
-          laugh.play().then(()=>{ laugh.pause(); laugh.currentTime=0; }),
-          startSfx.play().then(()=>{ startSfx.pause(); startSfx.currentTime=0; })
-        ]);
-        audioArmed = true;
-        armBanner.classList.add('hidden');
-        console.log('[audio] armed');
-
-        // Flush queued sounds
-        if (pendingStartSfx) { console.log('[audio] flushing queued start'); playStart(); pendingStartSfx = false; }
-        if (pendingPrankSfx) { console.log('[audio] flushing queued prank'); playLaugh(); pendingPrankSfx = false; }
-      } catch(e) {
-        console.warn('Audio arming failed:', e);
-        // leave banner visible, user may need another tap
-      }
-    }
-
-    // Use multiple event types to maximize success on mobile
-    window.addEventListener('pointerdown', tryArm, { passive:true });
-    window.addEventListener('touchstart', tryArm, { passive:true });
-    window.addEventListener('click', tryArm);
-
-    // Simple self-test hotkeys in console (optional):
-    //   window._testStart() and window._testPrank()
-    window._testStart = ()=> (audioArmed ? playStart() : (pendingStartSfx=true, console.log('queued start (not armed)')));
-    window._testPrank = ()=> (audioArmed ? playLaugh() : (pendingPrankSfx=true, console.log('queued prank (not armed)')));
 
     render();
   </script>
